--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -1,7 +1,9 @@
 .navbar{
 
     float: left;
-    background-color: #d8e8da
+   
+   
+    
    
 
 }
@@ -12,6 +14,7 @@
 .navbar > button{
     font-size: 18px;
     font-style:normal;
-    background-color: #c1e7d5;
-    
+    background-color: #8fefbc;
+    border-color: #86ebbc;  
+    height: auto;
 }
